crates/engine/query-solver/src/tests/snapshots/engine_query_solver__tests__entities__nested_join_with_name-graph.snap
---
source: crates/engine/query-solver/src/tests/entities.rs
expression: "digraph {\n    0 [ label = \"root\" ]\n    1 [ label = \"Product.name\" ]\n    2 [ label = \"Review.stars\" ]\n    3 [ label = \"Product.reviews\" ]\n    4 [ label = \"Query.products\" ]\n    5 [ label = \"Root#category\", shape=parallelogram, color=dodgerblue ]\n    6 [ label = \"products#category\", shape=box, color=dodgerblue ]\n    7 [ label = \"Root#name\", shape=parallelogram, color=dodgerblue ]\n    8 [ label = \"products#name\", shape=box, color=dodgerblue ]\n    9 [ label = \"Root#price\", shape=parallelogram, color=dodgerblue ]\n    10 [ label = \"products#price\", shape=box, color=dodgerblue ]\n    11 [ label = \"FedEntity#review\", shape=parallelogram, color=dodgerblue ]\n    12 [ label = \"reviews#review\", shape=box, color=dodgerblue ]\n    13 [ label = \"stars#review\", shape=box, color=dodgerblue ]\n    14 [ label = \"FedEntity#name\", shape=parallelogram, color=dodgerblue ]\n    15 [ label = \"name#name\", shape=box, color=dodgerblue ]\n    16 [ label = \"name#name\", shape=box, color=dodgerblue ]\n    17 [ label = \"*Product.id\" ]\n    18 [ label = \"id#category\", shape=box, color=dodgerblue ]\n    19 [ label = \"id#name\", shape=box, color=dodgerblue ]\n    20 [ label = \"id#price\", shape=box, color=dodgerblue ]\n    0 -> 4 [ label = \"\" ]\n    0 -> 5 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    0 -> 5 [ label = \"\", style=dashed,arrowhead=none ]\n    5 -> 6 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    6 -> 4 [ label = \"\", color=violet,arrowhead=none ]\n    0 -> 7 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    0 -> 7 [ label = \"\", style=dashed,arrowhead=none ]\n    7 -> 8 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    8 -> 4 [ label = \"\", color=violet,arrowhead=none ]\n    0 -> 9 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    0 -> 9 [ label = \"\", style=dashed,arrowhead=none ]\n    9 -> 10 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    10 -> 4 [ label = \"\", color=violet,arrowhead=none ]\n    4 -> 3 [ label = \"\" ]\n    10 -> 11 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    4 -> 11 [ label = \"\", style=dashed,arrowhead=none ]\n    11 -> 12 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    12 -> 3 [ label = \"\", color=violet,arrowhead=none ]\n    3 -> 2 [ label = \"\" ]\n    12 -> 13 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    13 -> 2 [ label = \"\", color=violet,arrowhead=none ]\n    4 -> 1 [ label = \"\" ]\n    10 -> 14 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    4 -> 14 [ label = \"\", style=dashed,arrowhead=none ]\n    14 -> 15 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    15 -> 1 [ label = \"\", color=violet,arrowhead=none ]\n    8 -> 11 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    8 -> 16 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    16 -> 1 [ label = \"\", color=violet,arrowhead=none ]\n    6 -> 11 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    6 -> 14 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    14 -> 17 [ label = \"\", color=orangered,arrowhead=inv ]\n    4 -> 17 [ label = \"\" ]\n    6 -> 18 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    18 -> 17 [ label = \"\", color=violet,arrowhead=none ]\n    8 -> 19 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    19 -> 17 [ label = \"\", color=violet,arrowhead=none ]\n    10 -> 20 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    20 -> 17 [ label = \"\", color=violet,arrowhead=none ]\n    11 -> 17 [ label = \"\", color=orangered,arrowhead=inv ]\n}\n"
---
digraph {
    0 [ root]
    1 [ Product.name]
    2 [ Review.stars]
    3 [ Product.reviews]
    4 [ Query.products]
    5 [ Root#category]
    6 [ products#category]
    7 [ Root#name]
    8 [ products#name]
    9 [ Root#price]
    10 [ products#price]
    11 [ FedEntity#review]
    12 [ reviews#review]
    13 [ stars#review]
    14 [ FedEntity#name]
    15 [ name#name]
    16 [ name#name]
    17 [ *Product.id]
    18 [ id#category]
    19 [ id#name]
    20 [ id#price]
    0 -> 4 [ label = "Field" ]
    0 -> 5 [ label = "CreateChildResolver" ]
    0 -> 5 [ label = "HasChildResolver" ]
    5 -> 6 [ label = "CanProvide" ]
    6 -> 4 [ label = "Provides" ]
    0 -> 7 [ label = "CreateChildResolver" ]
    0 -> 7 [ label = "HasChildResolver" ]
    7 -> 8 [ label = "CanProvide" ]
    8 -> 4 [ label = "Provides" ]
    0 -> 9 [ label = "CreateChildResolver" ]
    0 -> 9 [ label = "HasChildResolver" ]
    9 -> 10 [ label = "CanProvide" ]
    10 -> 4 [ label = "Provides" ]
    4 -> 3 [ label = "Field" ]
    10 -> 11 [ label = "CreateChildResolver" ]
    4 -> 11 [ label = "HasChildResolver" ]
    11 -> 12 [ label = "CanProvide" ]
    12 -> 3 [ label = "Provides" ]
    3 -> 2 [ label = "Field" ]
    12 -> 13 [ label = "CanProvide" ]
    13 -> 2 [ label = "Provides" ]
    4 -> 1 [ label = "Field" ]
    10 -> 14 [ label = "CreateChildResolver" ]
    4 -> 14 [ label = "HasChildResolver" ]
    14 -> 15 [ label = "CanProvide" ]
    15 -> 1 [ label = "Provides" ]
    8 -> 11 [ label = "CreateChildResolver" ]
    8 -> 16 [ label = "CanProvide" ]
    16 -> 1 [ label = "Provides" ]
    6 -> 11 [ label = "CreateChildResolver" ]
    6 -> 14 [ label = "CreateChildResolver" ]
    14 -> 17 [ label = "Requires" ]
    4 -> 17 [ label = "Field" ]
    6 -> 18 [ label = "CanProvide" ]
    18 -> 17 [ label = "Provides" ]
    8 -> 19 [ label = "CanProvide" ]
    19 -> 17 [ label = "Provides" ]
    10 -> 20 [ label = "CanProvide" ]
    20 -> 17 [ label = "Provides" ]
    11 -> 17 [ label = "Requires" ]
}
